--- a/local/docker-compose.yml
+++ b/local/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     networks:
       - jmeter-network
   server:
-    image: pedrocesarti/jmeter-docker:latest
+    image: jmeter:5.0
     command: server
     tty: true
     ports:
